# Magister_diplom

./: .gitignore
Times-And-Planes/: CMakeLists.txt  Stage -1.cpp  Stage -1.h  Zone.h  main.cpp
Times-And-Planes-2021-02/Fields of Zone/: Maps.cpp  StandardScheme.h
Times-And-Planes-2021-02/Functions/: Calculate times new plane.cpp  Create_Zone.h
Times-And-Planes-2021-02/Measure units/: Time.h
Times-And-Planes-2021-02/Read/: Read_CheckPointsRegExp.cpp  Read_SchemesRegExp.cpp
Times-And-Planes-2021-02/Source information/: Формат.txt
Times-And-Planes-2021-06/: CMakeLists.txt  Zone.cpp  Zone.h  main.cpp  Оптимизация.txt
Times-And-Planes-2021-06/Fields of Zone/: Flow.cpp  Flow.h  Maps.cpp  Maps.h  (+3 more)
Times-And-Planes-Optimization-2021-07/: CMakeLists.txt  main.cpp  Формат.txt
Times-And-Planes-Optimization-2021-07/Algorithmic program/: Zone.cpp  Zone.h
Times-And-Planes-Optimization-2021-07/Algorithmic program/Fields of Zone/: Flow.cpp  Flow.h  Maps.cpp  Maps.h  Point.h  Scheme.h  Waiting area.h
Times-And-Planes-Optimization-2021-07/Algorithmic program/Functions/: Calculate times new plane.h
Times-And-Planes-Optimization-2021-07/Algorithmic program/Functions/Assistant functions/: Read and build.cpp  Read and build.h  Topologic_Sort.h
Times-And-Planes-Optimization-2021-07/Algorithmic program/Functions/Geometric functions/: Arc length.h  Calculate standard scheme.h  Distance between two Points.h  Nearest point from the center to .cpp  Nearest point from the center to .h
Times-And-Planes-Optimization-2021-07/Algorithmic program/Functions/Output functions/: Constricted zone.h
Times-And-Planes-Optimization-2021-07/Algorithmic program/Functions/Times functions/: Backward propagation.cpp  Backward propagation.h  Calc time segments for StScheme.h  Calculate_times.cpp  Calculate_times.h  Initialization of time segments.cpp  Initialization of time segments.h  MergeTimes.cpp  MergeTimes.h  Plane enum.h
Times-And-Planes-Optimization-2021-07/Algorithmic program/Measure units/: Distance.cpp  MeasureUnits.h  Time.cpp  Time.h  Velocity.cpp
Times-And-Planes-Optimization-2021-07/Algorithmic program/Read/: Read_CheckPointsRegExp.cpp  Read_CheckPointsRegExp.h  Read_FlowsRegExp.cpp  Read_FlowsRegExp.h  Read_SchemesRegExp.cpp  Read_SchemesRegExp.h
Times-And-Planes-Optimization-2021-07/Algorithmic program/Source information/Flows/: Test.txt
Times-And-Planes-Optimization-2021-07/Algorithmic program/Source information/Points/: KoltsovoStScheme.txt
Times-And-Planes-Optimization-2021-07/Algorithmic program/Source information/Schemes/: Test.txt
Times-And-Planes-Optimization-2021-07/Optimization program/: Flow.cpp  Flow.h  Zone.cpp  Zone.h
Times-And-Planes-Optimization-2021-07/Optimization program/Errors/: Errors.h
Times-And-Planes-Optimization-2021-07/Optimization program/Fields of Zone/: Fields of Flow.cpp  Fields of Flow.h  Fields of Zone.cpp  Fields of Zone.h  Graph.cpp  Graph.h  Point.h
Times-And-Planes-Optimization-2021-07/Optimization program/Measure units/: Measure units.cpp  Measure units.h
Times-And-Planes-Optimization-2021-07/Optimization program/Read/: Assistant.h  Read points.cpp  Read points.h  Read.cpp  Read.h
Times-And-Planes-Optimization-2021-07/Optimization program/Source information/Points/: For Test.xlsx  Test.txt
Times-And-Planes-Optimization-2021-07/Optimization program/Source information/Schemes/: Test.txt  Test_hA.txt
Times-And-Planes/Fields of Zone/: CheckPoint.h  Flow.cpp  Flow.h  Maps.cpp  Maps.h  Point.h  Scheme.h  StandardScheme.h
Times-And-Planes/Functions/: Calculate standard scheme.cpp  Calculate standard scheme.h  Calculate times new plane.cpp  Calculate times new plane.h  Calculate times.cpp  Calculate times.h  Fill checkPoint coordinate and velocity.cpp  Fill checkPoint coordinate and velocity.h  Fill-scheme.cpp  MergeTimes.cpp  MergeTimes.h  Stage -1.cpp  Stage -1.h  Topologic_Sort.cpp  Topologic_Sort.h
Times-And-Planes/Functions/Assistant functions/: Calculate standard scheme.h  Distance between two Points.cpp  Distance between two Points.h  Fill checkPoint coordinate and velocity.cpp  Fill-scheme.cpp  Fill-scheme.h  Find-InVector-bool.h  Find-InVector.h  Nearest point from the center to .cpp  Nearest point from the center to .h  OpenFile.h
Times-And-Planes/Functions/Geometric functions/: Arc length.h  Calculate standard scheme.cpp  Calculate standard scheme.h  Nearest point from the center to .h
Times-And-Planes/Functions/Times functions/: Arc time.cpp  Calc time segments for StScheme.cpp  Calc time segments for StScheme.h  Calculate times.cpp  Calculate times.h  Initialization of time segments.cpp  Initialization of time segments.h  MergeTimes.cpp  Time segment from point to checkPoint.cpp
Times-And-Planes/Measure units/: Coordinate.cpp  Coordinate.h  Distance.cpp  Distance.h  MeasureUnits.h  Time.cpp  Velocity.cpp  Velocity.h
Times-And-Planes/Read/: Read_CheckPointsRegExp.cpp  Read_CheckPointsRegExp.h  Read_FlowRegExp.cpp  Read_FlowRegExp.h  Read_FlowsRegExp.cpp  Read_SchemeRegExp.cpp  Read_SchemeRegExp.h  Read_SchemesRegExp.cpp  Read_SchemesRegExp.h
Times-And-Planes/Source information/Flows/: EzFlowTimeTest.txt  FlowTest.txt  Test.txt  TwoFlowsTest.txt
Times-And-Planes/Source information/Points/: CheckPointEzTimeTest.txt  CheckPointTest.txt  CheckPointTestTopSort.txt  CheckPointTestTwoFlows.txt  CheckPointTestTwoFlowsTopSort.txt  Koltsovo.txt  KoltsovoStScheme — копия.txt  KoltsovoStScheme.txt  Test.txt  TestCycle.txt  TestFastStr.txt  TestFastStrReg.txt
Times-And-Planes/Source information/Schemes/: Koltsovo.txt  SchemeEzTimeTest.txt  SchemeTest.txt  SchemeTestTwoFlows.txt  Test.txt  TestCycle.txt  TestFastStr.txt
(+67 files in other folders)
